tests/baselines/reference/genericsWithoutTypeParameters1.errors.txt
==== tests/cases/compiler/genericsWithoutTypeParameters1.ts (15 errors) ====
    class C<T> {
        foo(): T { return null }
    }
    
    interface I<T> {
        bar(): T;
    }
    
    var c1: C;
            ~
!!! error TS2173: Generic type references must include all type arguments.
    var i1: I;
            ~
!!! error TS2173: Generic type references must include all type arguments.
    var c2: C<I>;
              ~
!!! error TS2173: Generic type references must include all type arguments.
    var i2: I<C>;
              ~
!!! error TS2173: Generic type references must include all type arguments.
    
    function foo(x: C, y: I) { }
                    ~
!!! error TS2173: Generic type references must include all type arguments.
                          ~
!!! error TS2173: Generic type references must include all type arguments.
    function foo2(x: C<I>, y: I<C>) { }
                       ~
!!! error TS2173: Generic type references must include all type arguments.
                                ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var x: { a: C } = { a: new C<number>() };
                ~
!!! error TS2173: Generic type references must include all type arguments.
    var x2: { a: I } = { a: { bar() { return 1 } } };
                 ~
!!! error TS2173: Generic type references must include all type arguments.
    
    class D<T> {
        x: C;
           ~
!!! error TS2173: Generic type references must include all type arguments.
        y: D;
           ~
!!! error TS2173: Generic type references must include all type arguments.
    }
    
    interface J<T> {
        x: I;
           ~
!!! error TS2173: Generic type references must include all type arguments.
        y: J;
           ~
!!! error TS2173: Generic type references must include all type arguments.
    }
    
    class A<T> { }
    function f<T>(x: T): A {
                         ~
!!! error TS2173: Generic type references must include all type arguments.
        return null;
    }